--- a/package.json
+++ b/package.json
@@ -2,8 +2,16 @@
   "name": "virdato",
   "version": "0.1.0",
   "private": true,
-  "scripts": { "dev": "next dev", "build": "next build", "start": "next start" },
-  "dependencies": { "next": "14.2.5", "react": "18.3.1", "react-dom": "18.3.1" },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
@@ -13,4 +21,3 @@
     "tailwindcss": "^4"
   }
 }
-
