--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
   "name": "virdato",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "dotenv": "^17.2.2",
-    "drizzle-orm": "^0.44.5",
     "next": "14.2.5",
-    "postgres": "^3.4.7",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "@supabase/supabase-js": "^2.45.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "drizzle-kit": "^0.31.4",
-    "tailwindcss": "^4",
-    "tsx": "^4.20.5",
-    "typescript": "^5"
+    "typescript": "^5.5.4",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
