--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "typescript": "^5.5.4",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18"
+    "@types/react-dom": "^18.2.18",
+    "drizzle-kit": "^0.24.0",
+    "dotenv": "^16.4.5"
   },
   "engines": {
     "node": "20.x"
