--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,10 @@
     "jsx": "preserve",
     "incremental": true,
     "plugins": [{ "name": "next" }],
-    "paths": { "@/*": ["./*"] }
+    "baseUrl": ".",                 // <-- add this
+    "paths": { "@/*": ["./*"] }     // you already have this
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.d.ts", ".next/types/**/*.ts"],
   "exclude": ["node_modules", "drizzle.config.ts", "drizzle.config.*", "src/db/**"]
 }
+
