--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "smoke": "tsx src/db/smoke.ts"
   },
   "dependencies": {
+    "@sentry/nextjs": "10.15.0",
     "@supabase/supabase-js": "^2.45.0",
     "@upstash/qstash": "^2.8.3",
     "@upstash/redis": "^1.35.4",
