--- a/package.json
+++ b/package.json
@@ -30,9 +30,15 @@
     "dotenv": "^16.6.1",
     "drizzle-kit": "^0.24.0",
     "tsx": "^4.20.5",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+
+    "tailwindcss": "3.4.10",
+    "postcss": "8.4.47",
+    "autoprefixer": "10.4.20"
   },
   "engines": {
     "node": "20.x"
   }
 }
+
+
