--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.21",
     "dotenv": "^16.6.1",
     "drizzle-kit": "^0.24.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "^5.5.4",
 
