--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "drizzle-orm": "^0.44.5",
     "next": "14.2.5",
     "postgres": "^3.4.7",
+    "posthog-js": "^1.268.6",
+    "posthog-node": "^5.9.1",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
@@ -27,21 +29,15 @@
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "10.4.20",
     "dotenv": "^16.6.1",
     "drizzle-kit": "^0.24.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.20.5",
-    "typescript": "^5.5.4",
-
-    "tailwindcss": "3.4.10",
     "postcss": "8.4.47",
-    "autoprefixer": "10.4.20"
+    "tailwindcss": "3.4.10",
+    "tsx": "^4.20.5",
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": "20.x"
   }
 }
-
-
