--- a/.github/workflows/upstash-keepalive.yml
+++ b/.github/workflows/upstash-keepalive.yml
@@ -1,21 +1,27 @@
 name: upstash-keepalive
 on:
   schedule:
-    - cron: '0 7 * * 1'   # Every Monday 07:00 UTC (~08:00/09:00 Berlin)
-  workflow_dispatch: {}    # Allow manual run
+    - cron: '0 7 * * 1'   # weekly
+  workflow_dispatch: {}
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
-      - name: Keep Redis alive (write a timestamp)
+      - name: Sanity check secrets
         env:
-          URL: ${{ secrets.UPSTASH_REST_URL }}
+          URL: ${{ secrets.UPSTASH_REDIS_REST_URL }}
           TOKEN: ${{ secrets.UPSTASH_REST_TOKEN }}
         run: |
-          set -euxo pipefail
-          ts=$(date -u +%s)
-          curl -fsS -H "Authorization: Bearer $TOKEN" \
-            "$URL/set/__keepalive__/$ts" -o /dev/null
-          # If you only have a read token, use:
-          # curl -fsS -H "Authorization: Bearer $TOKEN" "$URL/ping" -o /dev/null
+          set -e
+          test -n "$URL" || (echo "ERROR: UPSTASH_REDIS_REST_URL is empty"; exit 1)
+          test -n "$TOKEN" || (echo "ERROR: UPSTASH_REST_TOKEN is empty"; exit 1)
+          echo "Using URL: $URL"
+
+      - name: Ping Upstash (expect PONG)
+        env:
+          URL: ${{ secrets.UPSTASH_REDIS_REST_URL }}
+          TOKEN: ${{ secrets.UPSTASH_REST_TOKEN }}
+        run: |
+          curl -fsS -H "Authorization: Bearer $TOKEN" "$URL/ping"
+
