--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -14,32 +14,50 @@ concurrency:
 
 jobs:
   dump:
-    runs-on: macos-latest          # TEMP: avoid Ubuntu queue
+    runs-on: windows-latest
     timeout-minutes: 20
     steps:
-      - name: Install pg client (macOS)
+      - name: Validate secret exists
+        shell: pwsh
+        env:
+          DATABASE_URL_BACKUP: ${{ secrets.DATABASE_URL_BACKUP }}
         run: |
-          brew update
-          brew install libpq
-          brew link --force libpq
+          if ([string]::IsNullOrEmpty($env:DATABASE_URL_BACKUP)) {
+            Write-Error "DATABASE_URL_BACKUP secret missing (create it in Settings → Secrets and variables → Actions)."
+          } else {
+            Write-Host "Secret present (len):" $env:DATABASE_URL_BACKUP.Length
+          }
+
+      - name: Install pg client (Windows)
+        shell: pwsh
+        run: |
+          choco install postgresql16 --no-progress -y
+          echo "C:\Program Files\PostgreSQL\16\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
           pg_dump --version
+          psql --version
+
+      - name: Test DB connection
+        shell: pwsh
+        env:
+          DATABASE_URL_BACKUP: ${{ secrets.DATABASE_URL_BACKUP }}
+        run: |
+          psql "$env:DATABASE_URL_BACKUP" -c "select current_user, current_database();"
 
       - name: Dump Postgres (compressed)
+        shell: pwsh
         env:
-          DATABASE_URL_BACKUP: ${{ secrets.DATABASE_URL_BACKUP }}  # backup_ro URL
+          DATABASE_URL_BACKUP: ${{ secrets.DATABASE_URL_BACKUP }}
         run: |
-          set -euo pipefail
-          TS=$(date -u +%Y%m%d-%H%M%S)
-          FILE="backup-${TS}.dump"
-          pg_dump "$DATABASE_URL_BACKUP" -Z 9 -Fc -f "$FILE"
-          echo "FILE=$FILE" >> "$GITHUB_ENV"
+          $TS = Get-Date -Date (Get-Date).ToUniversalTime() -Format "yyyyMMdd-HHmmss"
+          $FILE = "backup-$TS.dump"
+          pg_dump "$env:DATABASE_URL_BACKUP" -Z 9 -Fc -f $FILE
+          echo "FILE=$FILE" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Debug listing
+        shell: pwsh
         run: |
-          set -e
-          ls -la
-          echo "FILE is: $FILE"
-          du -h "$FILE" || true
+          dir
+          Write-Host "FILE is: $env:FILE"
 
       - name: Upload artifact (90 days)
         uses: actions/upload-artifact@v4
@@ -47,5 +65,3 @@ jobs:
           name: neon-backup
           path: ${{ env.FILE }}
           retention-days: 90
-
-     
