--- a/.github/workflows/nightly-db-backup.yml
+++ b/.github/workflows/nightly-db-backup.yml
@@ -2,16 +2,15 @@ name: Nightly DB backup
 
 on:
   schedule:
-    - cron: "0 7 * * *"   # 07:00 UTC daily
-  workflow_dispatch:       # allow manual runs
+    - cron: "0 7 * * *"    # 07:00 UTC daily
+  workflow_dispatch:        # allow manual runs
 
 permissions:
-  contents: write          # needed to upload artifacts
+  contents: write
 
 concurrency: nightly-db-backup
-
 env:
-  PG_MAJOR: 17             # single place to bump later
+  PG_MAJOR: 17
 
 jobs:
   dump:
@@ -19,14 +18,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Quick connection test (psql)
+      - name: Quick connection test
         env:
           PGPASSWORD: ${{ secrets.PGPASSWORD }}
         run: |
           docker run --rm -e PGPASSWORD="$PGPASSWORD" postgres:${{ env.PG_MAJOR }}-alpine \
             psql -h "${{ secrets.PGHOST }}" -p "${{ secrets.PGPORT }}" -U "${{ secrets.PGUSER }}" -d "${{ secrets.PGDATABASE }}" -c "select 1"
 
-      - name: Dump Postgres (compressed custom format)
+      - name: Dump Postgres (compressed)
         env:
           PGPASSWORD: ${{ secrets.PGPASSWORD }}
         run: |
