--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -3,14 +3,14 @@ name: Nightly DB backup
 on:
   schedule:
     - cron: "0 7 * * *"        # 07:00 UTC daily
-  workflow_dispatch:            # allow manual runs
+  workflow_dispatch:
 
 permissions:
-  contents: write               # needed to upload artifacts
+  contents: write
 
 concurrency: nightly-db-backup
 env:
-  PG_MAJOR: 17                  # bump here when your server major changes
+  PG_MAJOR: 17
 
 jobs:
   dump:
@@ -18,28 +18,40 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # ---- CONNECTION TEST (with DNS + SSL) ----
       - name: Quick connection test (psql)
         env:
+          PGHOST: ${{ secrets.PGHOST }}
+          PGPORT: ${{ secrets.PGPORT }}
+          PGUSER: ${{ secrets.PGUSER }}
           PGPASSWORD: ${{ secrets.PGPASSWORD }}
+          PGDATABASE: ${{ secrets.PGDATABASE }}
+          PGSSLMODE: require
         run: |
-          docker run --rm -e PGPASSWORD="$PGPASSWORD" \
-            postgres:${{ env.PG_MAJOR }}-alpine \
-            psql -h "${{ secrets.PGHOST }}" -p "${{ secrets.PGPORT }}" \
-                 -U "${{ secrets.PGUSER }}" -d "${{ secrets.PGDATABASE }}" \
-                 -c "select 1"
+          # Fail fast if host is wrong
+          getent hosts "$PGHOST"
 
+          docker run --rm \
+            -e PGHOST -e PGPORT -e PGUSER -e PGPASSWORD -e PGDATABASE -e PGSSLMODE \
+            postgres:${{ env.PG_MAJOR }}-alpine \
+            psql "host=$PGHOST port=$PGPORT user=$PGUSER dbname=$PGDATABASE sslmode=$PGSSLMODE" -c "select 1"
+
+      # ---- DUMP STEP (uses pg_dump 17 with SSL) ----
       - name: Dump Postgres (compressed, custom format)
         env:
+          PGHOST: ${{ secrets.PGHOST }}
+          PGPORT: ${{ secrets.PGPORT }}
+          PGUSER: ${{ secrets.PGUSER }}
           PGPASSWORD: ${{ secrets.PGPASSWORD }}
+          PGDATABASE: ${{ secrets.PGDATABASE }}
+          PGSSLMODE: require
         run: |
           TS=$(date -u +%Y-%m-%dT%H-%M-%SZ)
           docker run --rm \
-            -e PGPASSWORD="$PGPASSWORD" \
+            -e PGHOST -e PGPORT -e PGUSER -e PGPASSWORD -e PGDATABASE -e PGSSLMODE \
             -v "$PWD:/dump" \
             postgres:${{ env.PG_MAJOR }}-alpine \
-            pg_dump -h "${{ secrets.PGHOST }}" -p "${{ secrets.PGPORT }}" \
-                    -U "${{ secrets.PGUSER }}" -d "${{ secrets.PGDATABASE }}" \
-                    -F c -Z 9 -f "/dump/db_${TS}.dump"
+            sh -lc 'pg_dump "host=$PGHOST port=$PGPORT user=$PGUSER dbname=$PGDATABASE sslmode=$PGSSLMODE" -F c -Z 9 -f "/dump/db_'"$TS"'".dump'
 
       - name: Upload artifact (90 days)
         uses: actions/upload-artifact@v4
@@ -48,4 +60,3 @@ jobs:
           path: db_*.dump
           retention-days: 90
 
-       
