--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -2,15 +2,13 @@ name: Nightly DB backup
 
 on:
   schedule:
-    - cron: "0 7 * * *"    # 07:00 UTC daily
-  workflow_dispatch:
+    - cron: "0 7 * * *"          # 07:00 UTC daily
+  workflow_dispatch:              # allow manual runs
 
 permissions:
   contents: write
 
 concurrency: nightly-db-backup
-env:
-  PG_MAJOR: 17
 
 jobs:
   dump:
@@ -18,22 +16,44 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Quick connection test (psql over URI)
+      # Install Postgres 17 client tools (psql/pg_dump)
+      - name: Install PostgreSQL 17 client
+        run: |
+          echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list
+          wget -qO- https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo tee /etc/apt/trusted.gpg.d/postgresql.asc > /dev/null
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client-17
+
+      # ---- Sanity: print parsed DATABASE_URL parts (so you can verify host/port) ----
+      - name: Show parsed DB URL
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
-          docker run --rm -e DATABASE_URL postgres:${{ env.PG_MAJOR }}-alpine \
-            psql "$DATABASE_URL?sslmode=require" -c "select 1"
+          python - <<'PY'
+import os, urllib.parse as u
+d = u.urlsplit(os.environ['DATABASE_URL'])
+print("HOST:", d.hostname)
+print("PORT:", d.port)
+print("DB:", d.path.lstrip('/'))
+print("SCHEME:", d.scheme)
+PY
 
+      # Quick connection test (fails fast if URL or password is wrong)
+      - name: Quick connection test
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        run: |
+          psql "$DATABASE_URL?sslmode=require" -c "select version();"
+
+      # Create compressed custom-format dump
       - name: Dump Postgres (compressed, custom format)
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
           TS=$(date -u +%Y-%m-%dT%H-%M-%SZ)
-          docker run --rm -e DATABASE_URL -v "$PWD:/dump" \
-            postgres:${{ env.PG_MAJOR }}-alpine \
-            sh -lc 'pg_dump "$DATABASE_URL?sslmode=require" -F c -Z 9 -f "/dump/db_'"$TS"'".dump'
+          pg_dump "$DATABASE_URL?sslmode=require" -F c -Z 9 -f "db_${TS}.dump"
 
+      # Keep artifact for 90 days (adjust as needed)
       - name: Upload artifact (90 days)
         uses: actions/upload-artifact@v4
         with:
