--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -3,12 +3,13 @@ name: Nightly DB backup
 on:
   schedule:
     - cron: "0 7 * * *"          # 07:00 UTC daily
-  workflow_dispatch:              # allow manual runs
+  workflow_dispatch:
 
 permissions:
-  contents: write                 # needed to upload artifacts
+  contents: write
 
 concurrency: nightly-db-backup
+
 jobs:
   dump:
     runs-on: ubuntu-latest
@@ -17,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Install Postgres 17 client tools on the runner (no Docker networking issues)
+      # Install Postgres 17 client tools (psql/pg_dump)
       - name: Install PostgreSQL 17 client
         run: |
           echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list
@@ -25,7 +26,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y postgresql-client-17
 
-      # Print what the runner sees from your DATABASE_URL (host/port/db only)
+      # Show what the runner sees from your DATABASE_URL
       - name: Show parsed DB URL
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -33,13 +34,25 @@ jobs:
           python - <<'PY'
 import os, urllib.parse as u
 d = u.urlsplit(os.environ['DATABASE_URL'])
+print("SCHEME:", d.scheme)
 print("HOST:", d.hostname)
 print("PORT:", d.port)
 print("DB:", d.path.lstrip('/'))
-print("SCHEME:", d.scheme)
 PY
 
-      # Quick connection test (fails fast if URL or password is wrong)
+      # DNS sanity check (host must resolve to an IP)
+      - name: DNS check
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        run: |
+          python - <<'PY'
+import os, urllib.parse as u, subprocess, sys
+h = u.urlsplit(os.environ['DATABASE_URL']).hostname
+print("Resolving:", h)
+sys.exit(subprocess.call(["getent","hosts",h]))
+PY
+
+      # Quick connection test (TLS required)
       - name: Quick connection test
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -54,7 +67,7 @@ PY
           TS=$(date -u +%Y-%m-%dT%H-%M-%SZ)
           pg_dump "$DATABASE_URL?sslmode=require" -F c -Z 9 -f "db_${TS}.dump"
 
-      # Keep artifact for 90 days (adjust as needed)
+      # Upload artifact
       - name: Upload artifact (90 days)
         uses: actions/upload-artifact@v4
         with:
@@ -62,3 +75,4 @@ PY
           path: db_*.dump
           retention-days: 90
 
+   
