--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -3,7 +3,7 @@ name: Nightly DB backup
 on:
   schedule:
     - cron: "0 7 * * *"          # 07:00 UTC daily
-  workflow_dispatch:
+  workflow_dispatch:              # allow manual runs
 
 permissions:
   contents: write
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Install Postgres 17 client tools (psql/pg_dump)
+      # Install Postgres 17 client tools (no Docker networking)
       - name: Install PostgreSQL 17 client
         run: |
           echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list
@@ -26,7 +26,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y postgresql-client-17
 
-      # Show what the runner sees from your DATABASE_URL
+      # Show what the runner sees in your DATABASE_URL
       - name: Show parsed DB URL
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -40,7 +40,7 @@ print("PORT:", d.port)
 print("DB:", d.path.lstrip('/'))
 PY
 
-      # DNS sanity check (host must resolve to an IP)
+      # DNS sanity check (host must resolve)
       - name: DNS check
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -67,12 +67,10 @@ PY
           TS=$(date -u +%Y-%m-%dT%H-%M-%SZ)
           pg_dump "$DATABASE_URL?sslmode=require" -F c -Z 9 -f "db_${TS}.dump"
 
-      # Upload artifact
+      # Upload artifact (90 days)
       - name: Upload artifact (90 days)
         uses: actions/upload-artifact@v4
         with:
           name: db-backup
           path: db_*.dump
           retention-days: 90
-
-   
