--- a/.github/workflows/nightly-db-backup-apt.yml
+++ b/.github/workflows/nightly-db-backup-apt.yml
@@ -2,8 +2,8 @@ name: Nightly DB backup (apt)
 
 on:
   schedule:
-    - cron: "0 7 * * *"          # 07:00 UTC daily
-  workflow_dispatch:
+    - cron: "0 7 * * *"    # nightly
+  workflow_dispatch:       # <-- THIS enables the Run workflow button
 
 permissions:
   contents: write
