--- a/.github/workflows/nightly-db-backup-apt.yml
+++ b/.github/workflows/nightly-db-backup-apt.yml
@@ -1,9 +1,9 @@
 name: Nightly DB backup (apt)
 
 on:
+  workflow_dispatch:          # <-- THIS creates the "Run workflow" button
   schedule:
-    - cron: "0 7 * * *"    # nightly
-  workflow_dispatch:       # <-- THIS enables the Run workflow button
+    - cron: "0 7 * * *"       # nightly at 07:00 UTC
 
 permissions:
   contents: write
@@ -14,11 +14,9 @@ jobs:
   dump:
     runs-on: ubuntu-latest
     timeout-minutes: 20
-
     steps:
       - uses: actions/checkout@v4
 
-      # Install Postgres 17 client tools (psql/pg_dump) on the runner
       - name: Install PostgreSQL 17 client
         run: |
           echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list
@@ -26,24 +24,17 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y postgresql-client-17
 
-      # Show what the runner sees in your DATABASE_URL
       - name: Show parsed DB URL
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        env: { DATABASE_URL: ${{ secrets.DATABASE_URL }} }
         run: |
           python - <<'PY'
 import os, urllib.parse as u
 d = u.urlsplit(os.environ['DATABASE_URL'])
-print("SCHEME:", d.scheme)
-print("HOST:", d.hostname)
-print("PORT:", d.port)
-print("DB:", d.path.lstrip('/'))
+print("SCHEME:", d.scheme); print("HOST:", d.hostname); print("PORT:", d.port); print("DB:", d.path.lstrip('/'))
 PY
 
-      # DNS sanity check (host must resolve)
       - name: DNS check
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        env: { DATABASE_URL: ${{ secrets.DATABASE_URL }} }
         run: |
           python - <<'PY'
 import os, urllib.parse as u, subprocess, sys
@@ -52,17 +43,12 @@ print("Resolving:", h)
 sys.exit(subprocess.call(["getent","hosts",h]))
 PY
 
-      # Quick connection test (TLS required)
       - name: Quick connection test
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        run: |
-          psql "$DATABASE_URL?sslmode=require" -c "select version();"
+        env: { DATABASE_URL: ${{ secrets.DATABASE_URL }} }
+        run: psql "$DATABASE_URL?sslmode=require" -c "select version();"
 
-      # Create compressed custom-format dump
       - name: Dump Postgres (compressed, custom format)
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        env: { DATABASE_URL: ${{ secrets.DATABASE_URL }} }
         run: |
           TS=$(date -u +%Y-%m-%dT%H-%M-%SZ)
           pg_dump "$DATABASE_URL?sslmode=require" -F c -Z 9 -f "db_${TS}.dump"
