--- a/.github/workflows/nightly-db-backup-apt.yml
+++ b/.github/workflows/nightly-db-backup-apt.yml
@@ -1,9 +1,8 @@
 name: Nightly DB backup (apt)
-
 on:
-  workflow_dispatch:          # <-- THIS creates the "Run workflow" button
+  workflow_dispatch:        # must be here exactly
   schedule:
-    - cron: "0 7 * * *"       # nightly at 07:00 UTC
+    - cron: "0 7 * * *"
 
 permissions:
   contents: write
