--- a/.github/workflows/nightly-db-backup-apt.yml
+++ b/.github/workflows/nightly-db-backup-apt.yml
@@ -1,4 +1,4 @@
-name: Nightly DB backup (apt) - parser test
+name: Nightly DB backup (apt)
 
 on:
   workflow_dispatch:
@@ -14,6 +14,7 @@ jobs:
   dump:
     runs-on: ubuntu-latest
     timeout-minutes: 20
+
     steps:
       - uses: actions/checkout@v4
 
@@ -45,6 +46,7 @@ PY
 import os, urllib.parse as u, subprocess, sys
 h = u.urlsplit(os.environ['DATABASE_URL']).hostname
 print("Resolving:", h)
+# NOTE: fixed stray ')' here — this is the correct line:
 sys.exit(subprocess.call(["getent","hosts",h]))
 PY
 
