--- a/.github/workflows/db-backup-apt2.yml
+++ b/.github/workflows/db-backup-apt2.yml
@@ -1,69 +1,9 @@
-name: Nightly DB backup (apt2)
-
+name: db-backup-apt2 (parser)
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 7 * * *"
-
-permissions:
-  contents: write
-
-concurrency: nightly-db-backup
 
 jobs:
-  dump:
+  ok:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Install PostgreSQL 17 client
-        run: |
-          echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list
-          wget -qO- https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo tee /etc/apt/trusted.gpg.d/postgresql.asc > /dev/null
-          sudo apt-get update
-          sudo apt-get install -y postgresql-client-17
-
-      - name: Show parsed DB URL
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        run: |
-          python - <<'PY'
-import os, urllib.parse as u
-d = u.urlsplit(os.environ['DATABASE_URL'])
-print("SCHEME:", d.scheme)
-print("HOST:", d.hostname)
-print("PORT:", d.port)
-print("DB:", d.path.lstrip('/'))
-PY
-
-      - name: DNS check
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        run: |
-          python - <<'PY'
-import os, urllib.parse as u, subprocess, sys
-h = u.urlsplit(os.environ['DATABASE_URL']).hostname
-print("Resolving:", h)
-sys.exit(subprocess.call(["getent","hosts",h]))
-PY
-
-      - name: Quick connection test
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        run: |
-          psql "$DATABASE_URL?sslmode=require" -c "select version();"
-
-      - name: Dump Postgres (compressed, custom format)
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        run: |
-          TS=$(date -u +%Y-%m-%dT%H-%M-%SZ)
-          pg_dump "$DATABASE_URL?sslmode=require" -F c -Z 9 -f "db_${TS}.dump"
-
-      - name: Upload artifact (90 days)
-        uses: actions/upload-artifact@v4
-        with:
-          name: db-backup
-          path: db_*.dump
-          retention-days: 90
+      - run: echo "parser ok"
