--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -1,16 +1,50 @@
-- name: Install PostgreSQL 17 client
-  run: |
-    sudo apt-get update
-    sudo apt-get install -y postgresql-client-17
-    echo "/usr/lib/postgresql/17/bin" >> "$GITHUB_PATH"
+name: Nightly DB backup
 
-- name: Verify pg_dump version
-  run: |
-    which pg_dump
-    pg_dump --version
+on:
+  schedule:
+    - cron: "0 4 * * *"   # 04:00 UTC nightly
+  workflow_dispatch:      # allow manual runs
 
-- name: Dump database
-  env:
-    DATABASE_URL: ${{ secrets.DATABASE_URL }}
-  run: |
-    pg_dump "$DATABASE_URL" -Fc -f backup.dump
+jobs:
+  dump:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout (optional)
+        uses: actions/checkout@v4
+
+      - name: Install PostgreSQL 17 client
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client-17
+          echo "/usr/lib/postgresql/17/bin" >> "$GITHUB_PATH"
+
+      - name: Verify pg_dump version
+        run: |
+          which pg_dump
+          pg_dump --version   # should show 17.x
+
+      # EITHER use a single DATABASE_URL secret...
+      # - name: Dump database
+      #   env:
+      #     DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      #   run: |
+      #     pg_dump "$DATABASE_URL" -Fc -f backup.dump
+
+      # ...OR use discrete PG* secrets:
+      - name: Dump database
+        env:
+          PGHOST:     ${{ secrets.PGHOST }}
+          PGPORT:     ${{ secrets.PGPORT }}
+          PGUSER:     ${{ secrets.PGUSER }}
+          PGPASSWORD: ${{ secrets.PGPASSWORD }}
+          PGDATABASE: ${{ secrets.PGDATABASE }}
+        run: |
+          pg_dump --format=custom --no-owner -f backup.dump
+
+      - name: Upload backup artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: db-backup
+          path: backup.dump
+          if-no-files-found: error
