--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -3,7 +3,7 @@ name: Nightly DB backup
 on:
   schedule:
     - cron: "0 4 * * *"   # 04:00 UTC nightly
-  workflow_dispatch:      # allow manual runs
+  workflow_dispatch:
 
 jobs:
   dump:
@@ -13,34 +13,22 @@ jobs:
       - name: Checkout (optional)
         uses: actions/checkout@v4
 
-      - name: Install PostgreSQL 17 client
+      # If your DB is reachable over the internet (not localhost), use this:
+      - name: Dump with dockerized pg_dump 17
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
-          sudo apt-get update
-          sudo apt-get install -y postgresql-client-17
-          echo "/usr/lib/postgresql/17/bin" >> "$GITHUB_PATH"
+          docker run --rm -v "$PWD:/dump" -e DATABASE_URL postgres:17 \
+            bash -lc 'pg_dump "$DATABASE_URL" -Fc -f /dump/backup.dump'
 
-      - name: Verify pg_dump version
-        run: |
-          which pg_dump
-          pg_dump --version   # should show 17.x
-
-      # EITHER use a single DATABASE_URL secret...
-      # - name: Dump database
+      # If your DATABASE_URL points to localhost/127.0.0.1 on the runner,
+      # use host networking instead:
+      # - name: Dump with dockerized pg_dump 17 (host network)
       #   env:
       #     DATABASE_URL: ${{ secrets.DATABASE_URL }}
       #   run: |
-      #     pg_dump "$DATABASE_URL" -Fc -f backup.dump
-
-      # ...OR use discrete PG* secrets:
-      - name: Dump database
-        env:
-          PGHOST:     ${{ secrets.PGHOST }}
-          PGPORT:     ${{ secrets.PGPORT }}
-          PGUSER:     ${{ secrets.PGUSER }}
-          PGPASSWORD: ${{ secrets.PGPASSWORD }}
-          PGDATABASE: ${{ secrets.PGDATABASE }}
-        run: |
-          pg_dump --format=custom --no-owner -f backup.dump
+      #     docker run --rm --network host -v "$PWD:/dump" -e DATABASE_URL postgres:17 \
+      #       bash -lc 'pg_dump "$DATABASE_URL" -Fc -f /dump/backup.dump'
 
       - name: Upload backup artifact
         uses: actions/upload-artifact@v4
